refactor(spi): separate payment policies from JDBC